2019-01-12 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/time.c:
	  Make some variables const so save RAM on targets that do not have __code.
	* src/pdk/gen.c:
	  Fix a segfault in code generation for &.

2019-01-11 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/pdk14/Makefile.in:
	  Use sdaspdk to build pdk14 library.
	* src/pdk/main.c,
	  src/pdk/gen.c:
	  Fix generation of invalid asm in a few places.
	* sdas/aspdk/pdkmch.c,
	  sdas/aspdk/pdkpst.c:
	  Assembler fixes, patch by Nicolas Lesser.
	* support/regression/ports/pdk14/spec.mk:
	  Prepare for future pdk14 regression testing.

2019-01-11 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/aspdk,
	  Makefile.common.in,
	  Makefile.in,
	  configure,
	  configure.ac,
	  sdas/linksrc/Makefile.in,
	  sdas/linksrc/sdld.c,
	  sdas/linksrc/sdld.h,
	  src/pdk/main.c:
	  Assembler for pdk14, patch by Nicolas Lesser.

2019-01-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/main.c:
	  Work around lack of link-time arithmetic.

2019-01-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c,
	  device/lib/pdk14/__gptrget.s:
	  Use knowledge on byte order for push af.

2019-01-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/main.c:
	  Fix invalid use of .dw for variables in ROM.
	* src/pdk/gen.c:
	  Fix various issues in code generation.

2019-01-09 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c,
	  device/lib/pdk14/__gptrget.s:
	  Support variables in ROM.

2019-01-09 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c,
	  src/pdk/ralloc2.cc:
	  Minor fixes.
	* src/SDCCast.c:
	  Enable standard library call optimization for pdk14.

2019-01-09 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c,
	  src/pdk/ralloc2.cc:
	  Optimize conditional jump on bit test.

2019-01-09 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Fixes for subtraction.
	* src/SDCCglue.c: